@@ -6,10 +6,21 @@
   end
 -%>
 HOSTS:
-  el7:
+  el8:
     roles:
       - server
       - default
+    platform:   el-8-x86_64
+    box:        centos/8
+    hypervisor: <%= hypervisor %>
+    yum_repos:
+      chef-current:
+        baseurl: 'https://packages.chef.io/repos/yum/current/el/8/$basearch'
+        gpgkeys:
+          - https://packages.chef.io/chef.asc
+  el7:
+    roles:
+      - server
     platform:   el-7-x86_64
     box:        centos/7
     hypervisor: <%= hypervisor %>
@@ -26,7 +37,7 @@ HOSTS:
     hypervisor: <%= hypervisor %>
     yum_repos:
       chef-current:
-        baseurl: 'https://packages.chef.io/repos/yum/current/el/7/$basearch'
+        baseurl: 'https://packages.chef.io/repos/yum/current/el/6/$basearch'
         gpgkeys:
           - https://packages.chef.io/chef.asc
 CONFIG:
