@@ -1,1 +1,2 @@
-type Useradd::Bootup = Enum['color','verbose','plain']
+# Boot mode sysconfig option
+type Useradd::Bootup = Enum['graphical','color','verbose','plain']
