@@ -1,1 +1,2 @@
+# Valid libuser modules
 type Useradd::LibuserModule = Enum['files','shadow','ldap']
