@@ -1,3 +1,7 @@
+* Thu Jan 09 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.0
+- Add EL8 support
+- Update the upper bound of simp-simplib to < 5.0.0
+
 * Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.4.0
 - Drop Puppet 4 support
 - Add Puppet 6 support
